docs: add README.md